@@ -1,12 +1,17 @@
 2002-03-09  Petr Mikulik  <mikulik@physics.muni.cz>
 
+	* src/tables.h src/tables.c src/set.c: Set colorbox, palette and p3md
+	options via lookup tables.
+
+2002-03-09  Petr Mikulik  <mikulik@physics.muni.cz>
+
 	* src/win/wgraph.c src/win/winmain.c: Remove compiler warnings.
 
 2002-03-07  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/03/09 11:33:08 $).
+	last modification date (from the tag $Date: 2002/03/09 14:23:23 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
